<?xml version="1.0"?>
<package format="2">
  <name>ad_kinematics</name>
  <version>0.0.1</version>
  <description>This package provides templated kinematics calculations for use in ceres automatic differentiation.</description>

  <maintainer email="ros@martinoehler.de">Martin Oehler</maintainer>

  <license>BSD</license>

  <author email="ros@martinoehler.de">Martin Oehler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_core</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>moveit_ros_planning</depend>

  <export>
  </export>
</package>
